# chapgpt-rust-version

./: .env  Cargo.toml  README.md
src/: main.rs
