[package]
name = "chatgpt-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = [ "json", "native-tls"] }
tokio = {version = "^1.0" , features = ["full"]}
serde = {version = "^1.0"}
serde_derive = "^1.0"
serde_json = "^1.0"
spinners = "^2.0"
dotenv = "0.15.0"